# Tweats-Classification-NLP

./: .env  .gitignore  README.md  Temp.csv  airflow.cfg  airflow.db  app.py  nlp_model.ipynb  nlp_model_spacy.ipynb  requirements.txt  temp.py  unittests.cfg
Backend_APIs/: DB_config.py  app.py
Backend_APIs/Services/: predictionFunction.py  save_output_Files.py  store_On_DB.py
DAGs/: Ingest_data_Job_dag.py  My_Predict_Job_functions.py  predict_data_Job_dag.py
Data/Data_Ingestion/: I2.csv  I4.csv
Data/Moved_Data_Files/: Actual_train.csv  I1.csv  I3.csv  I5.csv  I6.csv
Data/Moved_Data_Files_Predict/: Actual_train.csv  I1.csv  I2.csv  I3.csv  I4.csv  I5.csv  I6.csv
Data/data_for_dag_predict/: Actual_train.csv  I1.csv  I4.csv  I5.csv  I6.csv
Data/moved_original_data_from_Ingestion/: Actual_train.csv  I1.csv  I2.csv  I3.csv  I4.csv  I5.csv  I6.csv
Data_Ingestion/: I1.csv  I2.csv  I3.csv  I4.csv  I5.csv  I6.csv
FrontEnd/: Streamlit.py
Original_Data/: Actual_train.csv  MyIngest_Data.csv
airflow/: airflow.cfg  airflow.db
model_nlp/: nlp_model_final.ipynb
model_nlp/disaster_tweets/: inference.py  preprocess.py  (+1 more)
src/Backend_APIs/: app.py  model_bash.sh  pyproject.toml
src/Backend_APIs/Others/: DB_config.py
src/Backend_APIs/Others/Classes/: Database.py  Models.py  Tweet.py  store_On_DB.py
src/Backend_APIs/Others/Services/: predictionFunction.py  save_output_Files.py
src/Backend_APIs/model_nlp/: inference.py  preprocess.py  train.py
src/Backend_APIs/model_nlp/Notebooks/: nlp_model_final.ipynb
src/Backend_APIs/model_nlp/models/: model.joblib
(+7 files in other folders)
