[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "Backend_APIs"
version = "0.0.1"
authors = [
  { name="Author", email="ali.massoud136@gmail.com" },
]
description = "packaging the model"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"